--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
     "react-scripts": "2.1.8"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "json-server": "^0.14.2",
     "react": "^16.8.5",
-    "react-dom": "^16.8.5"
+    "react-dom": "^16.8.5",
+    "react-redux": "^6.0.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "semantic-ui-react": "^0.86.0"
   },
   "scripts": {
     "start": "react-scripts start",
