--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "classnames": "^2.2.5",
     "json-server": "^0.14.2",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
