--- a/package.json
+++ b/package.json
@@ -3,17 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "2.1.8"
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.11.2",
+    "jest-enzyme": "^7.0.2",
+    "react-scripts": "2.1.8",
+    "sinon": "^7.3.1"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "classnames": "^2.2.5",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.11.2",
     "json-server": "^0.14.2",
-    "react": "^16.8.5",
+    "react": "^16.8.6",
     "react-dom": "^16.8.5",
-    "react-redux": "^6.0.1",
+    "react-redux": "^7.0.0-beta.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "semantic-ui-react": "^0.86.0"
